[gd_scene load_steps=17 format=3 uid="uid://byrbn71qtldi2"]

[ext_resource type="Script" uid="uid://bhjm082qxdpd1" path="res://scripts/player_controller.gd" id="1_jumf5"]
[ext_resource type="Texture2D" uid="uid://ba5p2a1qkroeo" path="res://assets/temp/player-temp.png" id="2_16d5g"]
[ext_resource type="PackedScene" uid="uid://digpux32xmif6" path="res://assets/components/entity_state.res" id="3_insbl"]

[sub_resource type="Animation" id="Animation_rug40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 6)]
}

[sub_resource type="Animation" id="Animation_yceh7"]
resource_name = "player_attack_1"
length = 0.33333752
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.20833334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 8), Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7)]
}

[sub_resource type="Animation" id="Animation_uovkd"]
resource_name = "player_attack_recovery"
length = 0.29167083
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.20833333, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_cn88q"]
resource_name = "player_fall_idle_low"
length = 0.041670833
loop_mode = 1
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 6)]
}

[sub_resource type="Animation" id="Animation_nknpd"]
resource_name = "player_fall_start"
length = 0.37500417
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [50, 51, 52]
}

[sub_resource type="Animation" id="Animation_mxi64"]
resource_name = "player_idle"
length = 1.1250042
loop_mode = 1
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_jeibo"]
resource_name = "player_jump"
length = 0.45833752
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.041666668, 0.125, 0.20833333, 0.2916667, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_nsdob"]
resource_name = "player_run"
length = 0.83333755
loop_mode = 1
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.41666666, 0.5, 0.5833333, 0.6666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3)]
}

[sub_resource type="Animation" id="Animation_7rrun"]
resource_name = "player_t_pose"
length = 0.041670833
loop_mode = 1
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ah73p"]
_data = {
&"RESET": SubResource("Animation_rug40"),
&"player_attack_1": SubResource("Animation_yceh7"),
&"player_attack_recovery": SubResource("Animation_uovkd"),
&"player_fall_idle_low": SubResource("Animation_cn88q"),
&"player_fall_start": SubResource("Animation_nknpd"),
&"player_idle": SubResource("Animation_mxi64"),
&"player_jump_start": SubResource("Animation_jeibo"),
&"player_run": SubResource("Animation_nsdob"),
&"player_t_pose": SubResource("Animation_7rrun")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3mip4"]
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lgdun"]
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dclhl"]
radius = 17.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_jumf5")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ah73p")
}

[node name="PlayerSprite" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
texture = ExtResource("2_16d5g")
hframes = 10
vframes = 9
frame = 60

[node name="CollisionBox" type="CollisionShape2D" parent="."]
physics_interpolation_mode = 2
shape = SubResource("CapsuleShape2D_3mip4")

[node name="HurtBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_lgdun")
disabled = true
debug_color = Color(1, 0, 0, 0.41960785)

[node name="HitBox" type="CollisionShape2D" parent="."]
physics_interpolation_mode = 2
visible = false
position = Vector2(31, -2)
shape = SubResource("CircleShape2D_dclhl")
disabled = true
debug_color = Color(1, 0.4666667, 0, 0.41960785)

[node name="RayCast" type="Node2D" parent="."]
position = Vector2(31, -2)

[node name="HeadNudge" type="Node2D" parent="RayCast"]

[node name="LeftHeadNudgeOuter" type="RayCast2D" parent="RayCast/HeadNudge"]
position = Vector2(-41, -11)
target_position = Vector2(0, -4)
hit_from_inside = true

[node name="LeftHeadNudgeInner" type="RayCast2D" parent="RayCast/HeadNudge"]
position = Vector2(-38, -11)
target_position = Vector2(0, -4)
hit_from_inside = true

[node name="RightHeadNudgeInner" type="RayCast2D" parent="RayCast/HeadNudge"]
position = Vector2(-24, -11)
target_position = Vector2(0, -4)
hit_from_inside = true

[node name="RightHeadNudgeOuter" type="RayCast2D" parent="RayCast/HeadNudge"]
position = Vector2(-21, -11)
target_position = Vector2(0, -4)
hit_from_inside = true

[node name="LedgeHop" type="Node2D" parent="RayCast"]

[node name="LeftLedgeHopUpper" type="RayCast2D" parent="RayCast/LedgeHop"]
position = Vector2(-41, 12)
target_position = Vector2(-4, 0)
hit_from_inside = true

[node name="LeftLedgeHopLower" type="RayCast2D" parent="RayCast/LedgeHop"]
position = Vector2(-41, 17)
target_position = Vector2(-4, 0)
hit_from_inside = true

[node name="RightLedgeHopUpper" type="RayCast2D" parent="RayCast/LedgeHop"]
position = Vector2(-21, 12)
target_position = Vector2(4, 0)
hit_from_inside = true

[node name="RightLedgeHopLower" type="RayCast2D" parent="RayCast/LedgeHop"]
position = Vector2(-21, 17)
target_position = Vector2(4, 0)
hit_from_inside = true

[node name="Generic" type="Node2D" parent="RayCast"]

[node name="ApproachingWall" type="RayCast2D" parent="RayCast/Generic"]
position = Vector2(-31, 2)
target_position = Vector2(70, 0)
hit_from_inside = true

[node name="LeftGenericRay" type="RayCast2D" parent="RayCast/Generic"]
position = Vector2(-41, 2)
target_position = Vector2(-6, 0)
hit_from_inside = true

[node name="RightGenericRay" type="RayCast2D" parent="RayCast/Generic"]
position = Vector2(-21, 2)
target_position = Vector2(6, 0)
hit_from_inside = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SlideBoostCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="OnWallTimer" type="Timer" parent="."]
one_shot = true

[node name="PerfectWallJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="LurchlessTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="EntityState" parent="." instance=ExtResource("3_insbl")]
